<?xml version="1.0"?>
<package format="2">
  <name>access_pointcloud</name>
  <version>0.0.0</version>
  <description>The access_pointcloud package</description>

  <maintainer email="wohara@seqsense.com">Wakana Ohara</maintainer>
  <license>To be announced.</license>
  <author email="wohara@seqsense.com">Wakana Ohara</author>

  <license>To be announced</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>

</package>
